--- a/src/scss/pages/feeds/order-dessert.scss
+++ b/src/scss/pages/feeds/order-dessert.scss
@@ -2,7 +2,7 @@
 // Alternative Tabs
 
 .tab-panels {
-    background-color: rgb(239, 189, 143);
+    // background-color: rgb(239, 189, 143);
 }
 
 #tab-lists {
@@ -39,12 +39,16 @@
 }
 
 #dessert-info {
-    font-size: 24px;
+    font-size: 20px;
     // border: 2px solid black;
     border-radius: 2rem;
-    --edges-space: 12rem;
+    --edges-space: 1rem;
     margin-left: 2rem;
     margin-right: 2rem;
+    min-height: 600px;
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
 }
 
 #dessert-intro {
@@ -52,22 +56,39 @@
 }
 
 #dessert-store {
-    background-color: black;
-    color: white;
+    // background-color: black;
+    color: black;
     // max-width: 250px;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 2rem;
 }
 
-#dessert-title {
-    background-color: yellow;
-    border-radius: 2rem;
-    // border: 2px solid black;
-    padding: 2rem;
-    font-size: 45px;
+#dessert-featured {
 
     h1 {
-        font-size: 50px;
+        font-size: 80px;
+        position: relative;
+        color: black;
+    }
+
+    img {
+        clip-path: circle(241px at 243px 244px);
+        max-height: 500px;
+        position: relative;
+        top: -2em;
+        z-index: 2;
+    }
+}
+
+#dessert-title {
+    border-radius: 2rem;
+    padding: 1rem;
+    font-size: 30px;
+    text-align: left;
+    text-decoration: underline;
+
+    h1 {
+        font-size: 45px;
     }
 }
 
@@ -106,7 +127,7 @@
 
 
 #dessert-page {
-    background-color: rgb(227, 206, 173);
+    // background-color: rgb(227, 206, 173);
     // background-color: white;
     --edges-space: 0rem;
 }
@@ -147,7 +168,7 @@
     cursor: pointer;
     padding: 0.55rem 0.7rem;
 
-    @include apply-utility('font', 'serif');
+    // @include apply-utility('font', 'serif');
 
 
     &:hover {
