--- a/src/scss/blocks/_site-header.scss
+++ b/src/scss/blocks/_site-header.scss
@@ -9,6 +9,7 @@
     line-height: 1;
     // background-color: black;
     color: black;
+    margin-left: 1rem;
 }
 
 .account-items {
@@ -28,6 +29,5 @@
 .site-header__brand {
     display: block;
     text-align: center;
-    margin-inline: auto;
     color: black;
 }
