--- a/src/site/_includes/layouts/main.njk
+++ b/src/site/_includes/layouts/main.njk
@@ -13,8 +13,8 @@ layout: 'layouts/base'
 <main class="wide-card-index" id="main">
     <div class="heading__home">
         <div class="wrapper region">
-            <div class="all-center">
-            <h2>Web Design Experiments Lab</h2>
+            <div class="heading__section">
+            <h1>Web Design Experiments Lab</h1>
             <p>Exploring graphic design, layout and typography into CSS and web pages.</p>
             </div>
         </div>
