--- a/src/site/_includes/partials/site-footer.njk
+++ b/src/site/_includes/partials/site-footer.njk
@@ -45,6 +45,9 @@
                         data-category="Site-Wide Custom Events" data-label="Footer Link (index 1)">
                     </a>
                 </li>
+                <li>
+                    {% include "partials/standard-theme-toggle.njk" %} 
+                </li>
             </ul>
         </div>
     </div>
