Testing on tab drafts

--- a/src/site/_includes/layouts/source-page.html
+++ b/src/site/_includes/layouts/source-page.html
@@ -7,6 +7,7 @@ pageScripts:
 {% from 'macros/tag-pills.njk' import tagPills with context %}
 
 
+<kurva-tabs>
 <div class="source-page">
     <div class="source-inner wrapper region">
         <header class="region source__header">
