--- a/src/scss/_tokens.scss
+++ b/src/scss/_tokens.scss
@@ -23,7 +23,7 @@ $gorko-space-scale: (
 ///  FONTS
 $gorko-fonts: (
   "base": "Segoe UI,system-ui,-apple-system,sans-serif",
-  "serif": " Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
+  "serif": "Playfair Display, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
   "mono": "PlexMono,SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace",
 );
 
