add concert red page style poster

--- a/src/scss/kurva.scss
+++ b/src/scss/kurva.scss
@@ -200,6 +200,7 @@ pre > code {
 @import 'blocks/site-footer';
 @import 'blocks/site-header';
 
+@import 'web-components/kurva-tabs';
 
 @import 'pages/akses-page';
 @import 'pages/source-page';
