--- a/src/site/_includes/partials/site-footer.njk
+++ b/src/site/_includes/partials/site-footer.njk
@@ -5,10 +5,7 @@
         <div class="w-footer">
             <ul class="w-footer__linkbox-list">
                 <li>
-                    <a href="https://kicikku.com"
-                        data-category="Site-Wide Custom Events" data-label="Footer Link (index 1)">
-                        Developed by literasibadguy, KICIKKU
-                    </a>
+                        Developed by <a href="https://literasi.blog" target="_blank">literasibadguy</a>, <a href="https://kicikku.com" target="_blank">KICIKKU</a>
                 </li>
                 <li>
                     <a href="https://are.na"
@@ -18,12 +15,12 @@
                 </li>
                 <li>
                     <p>
-                        Thanks for the font: Familijen Grotesk, Work Sans, IBM Plex
+                        Font used: <a href="https://github.com/Familjen-Sthlm/Familjen-Grotesk" target="_blank">Familijen Grotesk</a>, <a href="weiweihuanghuang.github.io/Work-Sans/" target="_blank">Work Sans</a>, <a href="https://www.ibm.com/plex/" target="_blank">IBM Plex</a>
                     </p>
                 </li>
                  <li>
                     <p>
-                        Site built with <a href="https://11ty.dev">Eleventy</a>
+                        Site built with <a href="https://11ty.dev" target="_blank">Eleventy</a>
                     </p>
                 </li>
             </ul>
