--- a/src/site/_includes/layouts/main.njk
+++ b/src/site/_includes/layouts/main.njk
@@ -14,7 +14,7 @@ layout: 'layouts/base'
     <div class="heading__home">
         <div class="region">
             <div class="heading__section">
-            <h1>Web Design Experiments Lab</h1>
+            <h1>Web Design Publishing Index</h1>
             <p>Exploring graphic design, layout and typography into CSS and web pages.</p>
             </div>
         </div>
