dips for dessert store color

--- a/src/scss/pages/feeds/order-dessert.scss
+++ b/src/scss/pages/feeds/order-dessert.scss
@@ -1,6 +1,11 @@
 
 // Alternative Tabs
 
+// PALM SUGAR COLOR: #0b0303
+// YOUNG PALM SUGAR COLOR: #260901
+// WAFFLE COLOR: #d3aa54
+// FOOD GREEN COLOR: #024a30
+
 .tab-panels {
     // background-color: rgb(239, 189, 143);
 }
@@ -161,7 +166,7 @@
     display: inline-block;
     vertical-align: middle;
     background: transparent;
-    font-size: 28px;
+    font-size: 20px;
     color: black;
     border: none;
     appearance: none;
