--- a/src/scss/feeds/women-of-business.scss
+++ b/src/scss/feeds/women-of-business.scss
@@ -8,6 +8,11 @@
     flex-direction: column;
     color: white;
     font-family: PlexMono,Consolas,Liberation Mono,Menlo,monospace;
+
+    h1, h2, h3, h4, h5, h6 {
+        font-family: PlexMono,Consolas,Liberation Mono,Menlo,monospace;
+        font-weight: 400;
+    }
 }
 
 #wof-header {
@@ -35,3 +40,73 @@
     object-fit: cover;
 }
 
+#wof-storyline  {
+    margin: 1em;
+    border: 2px solid white;
+    padding: 2em;
+}
+
+.wof-stack {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+    // min-height: 400px;
+}
+
+.wof-stack * + * {
+    margin-top: 1rem;
+}
+
+#wof-lines {
+    padding: 2em;
+    min-height: 700px;
+    margin: 1em;
+    border: 2px solid white;
+    border-radius: 1em;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    // flex-grow: minmax(0, 1fr);
+
+    p {
+        font-size: clamp(12px, 2.5vw, 14px); 
+    }
+}
+
+#wof-line-img {
+    max-height: 500px;
+    object-fit: cover;
+    border-radius: 2em;
+}
+
+#wof-line-img-filter {
+    filter: grayscale(100%);
+    height: 300px;
+    width: 600px;
+    object-fit: cover;
+    border-radius: 2em;
+}
+
+#wof-ads {
+    display: flex;
+    flex-direction: row-reverse;
+    background-color: rgb(240, 240, 240);
+    margin: 2em;
+    border-radius: 2em;
+
+    h1 {
+        color: black;
+        position: relative;
+        right: 10em;
+        padding-top: 2em;
+        font-size: clamp(1.5rem, 1.29rem + 1.07vw, 2.25rem);
+    }
+
+    img {
+        clip-path: polygon(1.03% 18.35%, 49.33% 18.01%, 49.69% 98.38%, 0.98% 97.93%);
+        max-width: 1200px;
+        float: right;
+        object-fit: cover;
+        object-position: left;
+    }
+}
