fix materia images foot

--- a/src/site/_includes/partials/site-footer.njk
+++ b/src/site/_includes/partials/site-footer.njk
@@ -8,6 +8,9 @@
                         Developed by <a href="https://literasi.blog" target="_blank">literasibadguy</a>, <a href="https://kicikku.com" target="_blank">KICIKKU</a>
                 </li>
                 <li>
+                        Some Material Images through <a href="https://are.na" target="_blank">Are.na</a>, <a href="https://tumblr.com">Tumblr</a>
+                </li>
+                <li>
                     <p>
                         Font used: <a href="https://github.com/Familjen-Sthlm/Familjen-Grotesk" target="_blank">Familijen Grotesk</a>, <a href="weiweihuanghuang.github.io/Work-Sans/" target="_blank">Work Sans</a>, <a href="https://www.ibm.com/plex/" target="_blank">IBM Plex</a>
                     </p>
