Fix little layout for digital wedding

--- a/src/site/_includes/partials/site-footer.njk
+++ b/src/site/_includes/partials/site-footer.njk
@@ -8,7 +8,7 @@
                         Developed by <a href="https://literasi.blog" target="_blank">literasibadguy</a>, <a href="https://kicikku.com" target="_blank">KICIKKU</a>
                 </li>
                 <li>
-                        Some Material Images through <a href="https://are.na" target="_blank">Are.na</a>, <a href="https://tumblr.com">Tumblr</a>
+                        Some Material Images through <a href="https://are.na" target="_blank">Are.na</a>, <a href="https://tumblr.com" target="_blank">Tumblr</a>
                 </li>
                 <li>
                     <p>
