--- a/src/site/content/feeds/invitation-digital.njk
+++ b/src/site/content/feeds/invitation-digital.njk
@@ -16,7 +16,7 @@ pageScripts:
 <div id="undangan-page">
     <div id="undangan-intro" class="region wrapper all-center">
         <img alt="Flower of Weeding" src="/images/feeds/bunga-utama-weeding-of.png"></img>
-        <h1 class="tag">Name & Name</h1>
+        <h1 class="tag">Rima & Ilman</h1>
     </div>
     <div id="undangan-speech" class="wrapper all-center">
         <div class="w-stack">
@@ -31,20 +31,28 @@ pageScripts:
         </div>
         <div id="event-countdown" class="repel edges tag">
             <div id="count-day" class="count-item">
+                <div class="count-inside">
                 <h1 id="day"></h1>
                 <h2>Hari</h1>
+                </div>
             </div>
              <div id="count-hour" class="count-item">
+                <div class="count-inside">
                 <h1 id="hour"></h1>
                 <h2>Jam</h1>
+                </div>
             </div>
              <div id="count-minute" class="count-item">
+                <div class="count-inside">
                 <h1 id="minute"></h1>
                 <h2>Menit</h1>
+                </div>
             </div>
              <div id="count-second" class="count-item">
+                <div class="count-inside">
                 <h1 id="second"></h1>
                 <h2>Detik</h1>
+                </div>
             </div>
         </div>
         {% include "partials/countdown-time.njk" %}
@@ -52,22 +60,22 @@ pageScripts:
     </div>
     <div id="istri-keluarga" class="couple wrapper region rag">
         <img class="bunga-border" alt="Bunga Line Footer" src="/images/feeds/bunga-line-footer.png"></img>
-        <div class="couple-columns">
+        <div class="sidebar region">
         <div class="photo-placeholder">
             <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="50" cy="50" r="50" fill="#f7c357"/>
             </svg>
         </div>
         <div class="flow">
-            <h1>Nama Nama</h1>
-            <p>Putra dari Bapak - Ibu<p>
+            <h1>Rima Nuzla Fitri, S.T</h1>
+            <p>Putri dari Drs. H. Edi Saputra - Dra. Hj. Nurbainir<p>
         </div>
         </div>
     </div>
     <div id="suami-keluarga" class="couple wrapper region tag">
-        <div class="couple-columns">
+        <div class="sidebar region" data-direction="rtl">
         <div class="flow">
-            <h1>Nama Nama</h1>
+            <h1>Ilman Nur Syamsudin, S.P</h1>
             <p>Putra dari Bapak - Ibu<p>
         </div>
         <div class="photo-placeholder">
