--- a/src/scss/pages/feeds/_undangan-digital.scss
+++ b/src/scss/pages/feeds/_undangan-digital.scss
@@ -42,7 +42,7 @@
   }
 
 #undangan-intro {
-    --region-space: 2rem;
+    // --region-space: 2rem;
     h1 {
         font-size: 60px;
     }
@@ -66,15 +66,32 @@
 }
 
 .count-item {
-    padding: 2rem;
     border: 1px solid rgb(247, 195, 87);
     border-radius: 1rem;
     text-align: center;
-    max-width: 100px;
+    max-width: 70px;
+
+    .count-inside {
+        padding: 1rem;
+    }
 }
 
 #istri-keluarga {
     --region-space: 2rem;
+}
+
+#suami-keluarga {
+
+    .flow {
+        display: flex;
+        flex-direction: column;
+        justify-content: right;
+        text-align: right;
+    }
+
+    h1, p {
+        margin-inline: unset;
+    }
 }
 
 .couple {
@@ -120,6 +137,20 @@
         justify-items: start;
         align-items: center;
     }
+
+    .count-item {
+        max-width: 100px;
+    }
+
+    .photo-placeholder {
+        max-width: 100px;
+    }
+
+    .flower-frame {
+        img {
+            max-width: 200px;
+        }
+    }
 }
 
 .bunga-border {
@@ -128,7 +159,7 @@
 }
 
 .photo-placeholder {
-    max-width: 150px;
+    max-width: 100px;
     margin-inline: auto;
 
     svg {
@@ -200,8 +231,10 @@
 .flower-frame {
     min-width: 250px;
     justify-content: space-between;
+    flex-wrap: nowrap;
+    margin-inline: unset;
     img {
-        max-width: 200px;
+        max-width: 150px;
     }
 
     #reverse {
