--- a/src/scss/feeds/happiness-index.scss
+++ b/src/scss/feeds/happiness-index.scss
@@ -17,7 +17,7 @@
     background-color: #edefec;
 
     h1 {
-        font-size: 4em;
+        font-size: 2em;
     }
 
     &:hover {
@@ -32,7 +32,7 @@
 
 #happiness-header  {
     display: flex;
-    gap: 2em;
+    gap: 2rem;
     justify-content: start;
     padding: 2em;
 }
@@ -46,7 +46,7 @@
     padding: 2em;
     display: flex;
     justify-content: flex-start;
-    gap: 8em;
+    gap: 2em;
     color: #141612;
 
     font-size: xx-small;
@@ -61,60 +61,77 @@
     }
 }
 
-.act-eff {
-    display: flex;
-    width: 600px;
-    justify-content: right;
 
+@include media-query('md') {
+
+    #happiness-title {
+
+        h1 {
+            font-size: 4em;
+        }
+    }
+
+    .activity-item  {
+        gap: 8em;
+    }
+
+    .act-eff {
+        display: flex;
+        width: 600px;
+        justify-content: right;
+    
+    }
+
+    #sex-active {
+        width: 1000px;
+    }
+    
+    #dance-active {
+        width: 800px;
+    }
+    
+    // #library-active {
+    //     padding-right: 7em;
+    // }
+    
+    // #running-active {
+    //     padding-right: 8em;
+    // }
+    
+    // #gardening-active {
+    //     padding-right: 9em;
+    // }
+    
+    // #singing-active {
+    //     padding-right: 10em;
+    // }
+    
+    #talking-active {
+        width: 300px;
+    }
+    
+    #nature-active {
+        width: 280px;
+    }
+    
+    #nature-active {
+        width: 250px;
+    }
+    
+    #walk-active {
+        width: 260px;
+    }
+    
+    #hunt-active {
+        width: 250px;
+    }
+    
+    #alcohol-active {
+        width: 200px;
+    }
 }
 
-#sex-active {
-    width: 1000px;
-}
 
-#dance-active {
-    width: 800px;
-}
-
-// #library-active {
-//     padding-right: 7em;
-// }
-
-// #running-active {
-//     padding-right: 8em;
-// }
-
-// #gardening-active {
-//     padding-right: 9em;
-// }
-
-// #singing-active {
-//     padding-right: 10em;
-// }
-
-#talking-active {
-    width: 300px;
-}
-
-#nature-active {
-    width: 280px;
-}
-
-#nature-active {
-    width: 250px;
-}
-
-#walk-active {
-    width: 260px;
-}
-
-#hunt-active {
-    width: 250px;
-}
-
-#alcohol-active {
-    width: 200px;
-}
 
 #reference-activity {
     a {
