--- a/src/site/content/feeds/invitation-digital.njk
+++ b/src/site/content/feeds/invitation-digital.njk
@@ -16,7 +16,7 @@ pageScripts:
 <div id="undangan-page">
     <div id="undangan-intro" class="region wrapper all-center">
         <img alt="Flower of Weeding" src="/images/feeds/bunga-utama-weeding-of.png"></img>
-        <h1 class="tag">Rima & Ilman</h1>
+        <h1 class="tag">Nama & Nama</h1>
     </div>
     <div id="undangan-speech" class="wrapper all-center">
         <div class="w-stack">
@@ -67,16 +67,16 @@ pageScripts:
             </svg>
         </div>
         <div class="flow">
-            <h1>Rima Nuzla Fitri, S.T</h1>
-            <p>Putri dari Drs. H. Edi Saputra - Dra. Hj. Nurbainir<p>
+            <h1>Nama Putri</h1>
+            <p>Putri dari Orang Tua<p>
         </div>
         </div>
     </div>
     <div id="suami-keluarga" class="couple wrapper region tag">
         <div class="sidebar region" data-direction="rtl">
         <div class="flow">
-            <h1>Ilman Nur Syamsudin, S.P</h1>
-            <p>Putra dari Bapak - Ibu<p>
+            <h1>Nama Putra</h1>
+            <p>Putra dari Orang Tua<p>
         </div>
         <div class="photo-placeholder">
             <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
@@ -90,7 +90,7 @@ pageScripts:
         <h3>Rangkaian Acara akan diselenggarakan pada:</h3>
         <div id="undangan-date" class="repel region">
             <h1>Minggu</h1>
-            <h1>25 Agustus</h1>
+            <h1>25 Agustus ss</h1>
             <h1>2022</h1>
         </div>
         <div id="akad-nikah" class="region w-stack tag">
@@ -144,7 +144,7 @@ pageScripts:
         <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan Terima Kasih</h3>
         <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
         <h3>KAMI YANG BERBAHAGIA</h3>
-        <h1>Name & Name</h1>
+        <h1>Nama & Nama</h1>
         {# Side Flower Image #}
         <div class="flower-frame repel tag">
             <img id="reverse" alt="Bunga Frame Left" src="/images/feeds/bunga-frame.png"></img>
