--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -14,6 +14,12 @@ pagination:
 
 {% include "partials/transition-scroll.njk" %}
 
+<div id="undangan-modal-invite">
+    <div id="invite-box">
+    <h2>Mengundang</h2>
+    <h2>{{ paged.data.namaUndangan }}</h2>
+    </div>
+</div>
 <div id="undangan-page">
     <div id="undangan-intro" class="region wrapper all-center">
         <img alt="Flower of Weeding" src="/images/feeds/bunga-utama-weeding-of.png"></img>
