--- a/src/scss/feeds/favorites-spots-pontianak.scss
+++ b/src/scss/feeds/favorites-spots-pontianak.scss
@@ -44,7 +44,7 @@
     #title-big {
         font-size: 4rem;
         padding: 1rem;
-        // animation-name: stayFlyReverse;
+        animation-name: stayFlyReverse;
         animation-iteration-count: infinite;
 	    animation-timing-function: ease-in-out;
 	    animation-duration: 3s;
