--- a/src/scss/pages/feeds/_undangan-digital.scss
+++ b/src/scss/pages/feeds/_undangan-digital.scss
@@ -1,5 +1,20 @@
 
 
+ .web-modal__content {
+    flex: 1;
+    overflow: auto;
+    padding: 1.5em 1.5em 0;
+    color: white;
+  }
+
+
+#undangan-modal-invite {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(1, 1, 1, 0.4);
+}
+
 #undangan-page {
     background-color: rgb(14, 27, 44);
     color: rgb(247, 195, 87);
