--- a/src/scss/feeds/favorites-spots-pontianak.scss
+++ b/src/scss/feeds/favorites-spots-pontianak.scss
@@ -5,7 +5,7 @@
 
 #favorite-spot-ptk {
     background-color: #0251a8;
-    min-height: 800px;
+    min-height: 1000px;
 }
 
 @keyframes stayFly {
@@ -26,6 +26,30 @@
 	}
 }
 
+@keyframes fadingIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 100;
+    }
+}
+
+@keyframes fadingOut {
+    0% {
+        visibility: visible;
+    }
+
+    100% {
+        visibility: hidden;
+    }
+}
+
+.dragme {
+    cursor: move;
+}
+
 .big-size-spot {
     font-size: 8em;
     color: #f3f1ed;
@@ -44,12 +68,37 @@
     #title-big {
         font-size: 4rem;
         padding: 1rem;
-        animation-name: stayFlyReverse;
-        animation-iteration-count: infinite;
-	    animation-timing-function: ease-in-out;
-	    animation-duration: 3s;
-        animation-direction: alternate;
+
+        h1 {
+            opacity: 0;
+            animation-name: fadingIn;
+            animation-duration: 1s;
+            // animation-timing-function: ease-in;
+            animation-timing-function: cubic-bezier(.76,.05,.86,.06);
+            animation-iteration-count: infinite;
+            animation-play-state: running;
+            animation-direction: alternate;
+        }
+
+        #journey-label {
+            animation-delay: 0.2s;
+        }
+
+        #bill-label {
+            animation-delay: 0.4s;
+        }
+
+        #city-label {
+            animation-delay: 0.6s;
+        }
     }
+}
+
+#spot-box {
+    position: absolute;
+    width: 480px;
+    height: 640px;
+    right: 10em;
 }
 
 #bill-table {
