--- a/src/site/content/feeds/favorite-spots-pontianak.njk
+++ b/src/site/content/feeds/favorite-spots-pontianak.njk
@@ -15,12 +15,11 @@ tags:
 <div id="favorite-spot-ptk">
     <div id="inner-spot">
     <div id="spot-right">
-        <drag-move targetName="dragme">
-            <div id="spot-box" class="dragme">
-                <img id="concert-cover-1" src="/images/feeds/bridge-pontianak.jpg" />
+        <drag-move>
+            <div id="spot-box">
+                <img class="dragme" id="spot-cover" src="/images/feeds/bridge-pontianak.jpg" />
             </div>
         </drag-move>
-        
     </div>
     <div id="spot-left">
         <div class="big-size-spot region">
