--- a/src/scss/feeds/favorites-spots-pontianak.scss
+++ b/src/scss/feeds/favorites-spots-pontianak.scss
@@ -5,7 +5,7 @@
 
 #favorite-spot-ptk {
     background-color: #0251a8;
-    min-height: 1000px;
+    min-height: 1600px;
 }
 
 @keyframes stayFly {
@@ -70,10 +70,8 @@
         padding: 1rem;
 
         h1 {
-            opacity: 0;
-            animation-name: fadingIn;
+            // animation-name: fadingIn;
             animation-duration: 1s;
-            // animation-timing-function: ease-in;
             animation-timing-function: cubic-bezier(.76,.05,.86,.06);
             animation-iteration-count: infinite;
             animation-play-state: running;
@@ -99,6 +97,10 @@
     width: 480px;
     height: 640px;
     right: 10em;
+
+    img {
+        position: absolute;
+    }
 }
 
 #bill-table {
