--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -24,14 +24,17 @@ pagination:
     </div>
 </div>
 </base-modal>
+<div id="undangan-background">
+    <img alt="Padang Background" src="/images/feeds/padang.jpg"></img>
+</div>
 <div id="undangan-page">
-    <div id="undangan-intro" class="region wrapper all-center">
+    <div id="undangan-intro" class="region wrapper all-center w-stack">
         <img alt="Flower of Weeding" src="/images/feeds/bunga-utama-weeding-of.png"></img>
-        <h1 class="tag">Rima & Ilman</h1>
+        <h1 id="couple-name" class="tag">Rima & Ilman</h1>
     </div>
     <div id="undangan-speech" class="wrapper all-center">
         <div class="w-stack">
-        <h3 class="tag">Assalamu'alaikum Warahmatullahi Wabarakatuh</h3>
+        <img id="salam-cover" class="tag" alt="Assalamualaikum" src="/images/feeds/Salam@8x.png"></img>
         <p class="tag">Maha suci Allah yang telah menciptakan mahluk-Nya berpasang-pasangan.
             Ya Allah, perkenankanlah kami merangkaikan kasih sayang yang
             kau ciptakan diantara kami untuk mengikuti Sunnah Rasul-Mu dalam
@@ -100,9 +103,9 @@ pagination:
     <div id="undangan-event" class="wrapper all-center region tag">
         <h3>Rangkaian Acara akan diselenggarakan pada:</h3>
         <div id="undangan-date" class="repel region">
-            <h1>Minggu</h1>
-            <h1>25 Agustus</h1>
-            <h1>2022</h1>
+            <h1 id="date-day">Minggu</h1>
+            <h1 id="date-month">25 Agustus</h1>
+            <h1 id="date-year">2022</h1>
         </div>
         <div id="akad-nikah" class="region w-stack tag">
             <h1>Akad Nikah</h1>
@@ -155,7 +158,7 @@ pagination:
         <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan Terima Kasih</h3>
         <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
         <h3>KAMI YANG BERBAHAGIA</h3>
-        <h1>Name & Name</h1>
+        <h1>Rima & Ilman</h1>
         {# Side Flower Image #}
         <div class="flower-frame repel tag">
             <img id="reverse" alt="Bunga Frame Left" src="/images/feeds/bunga-frame.png"></img>
