--- a/src/scss/pages/feeds/_undangan-digital.scss
+++ b/src/scss/pages/feeds/_undangan-digital.scss
@@ -12,17 +12,31 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgb(1, 1, 1, 0.4);
+    z-index: 5;
+}
+
+#undangan-background {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 #undangan-page {
-    background-color: rgb(14, 27, 44);
+    background-color: rgb(1, 1, 1, 0.6);
     color: rgb(247, 195, 87);
-    font-family: Cormorant, Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Cormorant', Georgia, 'Times New Roman', Times, serif;
+    z-index: 4;
+    position: relative;
 
     h1, h2, h3, h4, p {
         font-family: Cormorant, Georgia, 'Times New Roman', Times, serif;
-        font-weight: 400;
+        font-weight: 600;
     }
 }
 
@@ -32,6 +46,13 @@
 	animation-iteration-count: 1;
 	animation-timing-function: ease-in;
 	animation-duration: 1s;
+
+    --region-space: 1em;
+
+    #couple-name {
+        margin-top: 1em;
+        margin-bottom: 1em;
+    }
 }
 
 @keyframes fadeInOpacity {
@@ -60,6 +81,7 @@
     // --region-space: 2rem;
     h1 {
         font-size: 60px;
+        font-weight: 700;
     }
 
     img {
@@ -72,12 +94,23 @@
         max-width: 200px;
         margin-inline: auto;
     }
+
+    p {
+        font-weight: 400;
+        font-size: 20px;
+    }
+
     max-width: 700px;
     line-height: 1.5rem;
+
+    #salam-cover {
+        max-width: 360px;
+    }
 }
 
 #event-countdown {
     justify-content: center;
+    --edges-space: 2em;
 }
 
 .count-item {
@@ -85,6 +118,10 @@
     border-radius: 1rem;
     text-align: center;
     max-width: 70px;
+
+    h1, h2 {
+        font-weight: 600;
+    }
 
     .count-inside {
         padding: 1rem;
@@ -136,6 +173,14 @@
 
 
 @include media-query('md') {
+
+    #undangan-speech {
+    
+        #salam-cover {
+            max-width: 450px;
+        }
+    }
+
     .couple {
         --cluster-horizontal-alignment: center;
         text-align: left;
@@ -235,11 +280,20 @@
     img {
         max-width: 50px;
     }
+
+    h3 {
+        font-size: 24px;
+        font-family: 'Cormorant', Georgia, 'Times New Roman', Times, serif;
+    }
 }
 
 .weeding-location {
     img {
         max-width: 40px;
+    }
+
+    h3 {
+        font-size: 24px;
     }
 }
 
