--- a/src/site/_includes/partials/ucapan-form.njk
+++ b/src/site/_includes/partials/ucapan-form.njk
@@ -1,8 +1,8 @@
 
 <ucapan-box>
 <div class="wrapper">
-    <h2 class="ucapin__message">Kartu Ucapan</h2>
-    <form class="flow gap-top-size-2" method="post">
+    <h2 class="ucapin__messag gap-top-size-1">Kartu Ucapan</h2>
+    <form class="flow gap-top-size-1" method="post">
         <div>
             <label class="visually-hidden" for="sub-firstname">Tulis nama</label>
             <input id="sub-firstname" name="FirstName" placeholder="nama kamu" required
