--- a/src/site/content/feeds/favorite-spots-pontianak.njk
+++ b/src/site/content/feeds/favorite-spots-pontianak.njk
@@ -6,7 +6,6 @@ pageScripts:
 styleScripts:
     - /css/favorites-spots-pontianak.css
 tags: 
-    - feeds
     - flex
     - intermediate
     - in-progress
@@ -100,6 +99,18 @@ tags:
                 </div>
             </div>
         </div>
+        </div>
+    </div>
+    <div id="spot-story">
+        <div id="spot-experiences">
+            <h1>I REALLY LOVE THE SPOTS. ITS UNIMAGINABLE AND FORGETLESS, I HOPE I CAN REMEMBER THIS FOREVER</h1>
+            <h1>WHAT A SUNSHINE, LOVE THE LOCALS WITH THEIR STREET FOODS, IT MUS BE THE BEST HANGOUT WITH FRIENDS</h1>
+            <h1>I HOPE I CAN BRING THOSE BAKWAN INTO MY CITY, SO MY GRANDMA CAN TASTE AND MAKE IT EVERYDAY</h1>
+        </div>
+        <div id="spot-favorites">
+            <h1>TANJUNG SANA SINI SPOT</h1>
+            <h1>SULTAN PRINCE CASTLE</h1>
+            <h1>WARUNG KOPI ASIANG</h1>
         </div>
     </div>
     </div>
