--- a/src/scss/pages/feeds/_undangan-digital.scss
+++ b/src/scss/pages/feeds/_undangan-digital.scss
@@ -13,6 +13,10 @@
     width: 100%;
     height: 100%;
     z-index: 5;
+
+    h2 {
+        font-family: Cormorant, Georgia, 'Times New Roman', Times, serif;
+    }
 }
 
 #undangan-background {
@@ -254,17 +258,22 @@
 
 #undangan-date {
     max-width: 600px;
-    // border-right: 1px solid rgb(247, 195, 87);
     max-height: 100px;
     padding: 1rem;
+    justify-content: space-evenly;
 
-    *:nth-child(2) {
-        // border-right: 1px solid rgb(247, 195, 87);
-        // border-left: 1px solid rgb(247, 195, 87);
+    #date-day {
+        border-right: 1px solid rgb(247, 195, 87);
+        padding-right: 1em;
+        padding-top: 1em;
+        padding-bottom: 1em;
     }
 
-    * {
-        // border-right: 1px solid rgb(247, 195, 87);
+    #date-year {
+        border-left: 1px solid rgb(247, 195, 87);
+        padding-left: 1em;
+        padding-top: 1em;
+        padding-bottom: 1em;
     }
 }
 
@@ -333,7 +342,7 @@
 
 #ucapan-lists {
     max-height: 600px;
-    border: 1px solid #0e1b2c;
+    border: 1px solid rgb(247, 195, 87);
     display: block;
     overflow: scroll;
     border-radius: 1rem;
