--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -25,7 +25,7 @@ pagination:
 </div>
 </base-modal>
 <div id="undangan-background">
-    <img alt="Padang Background" src="/images/feeds/padang.jpg"></img>
+    <img alt="Padang Background" src="/images/feeds/padang.JPG"></img>
 </div>
 <div id="undangan-page">
     <div id="undangan-intro" class="region wrapper all-center w-stack">
