--- a/src/scss/pages/feeds/_undangan-digital.scss
+++ b/src/scss/pages/feeds/_undangan-digital.scss
@@ -15,7 +15,7 @@
     z-index: 5;
 
     h2 {
-        font-family: Cormorant, Georgia, 'Times New Roman', Times, serif;
+        font-family: Cormorant, 'Times New Roman', Times, serif;
     }
 }
 
@@ -34,12 +34,12 @@
 #undangan-page {
     background-color: rgb(1, 1, 1, 0.6);
     color: rgb(247, 195, 87);
-    font-family: 'Cormorant', Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Cormorant', 'Times New Roman', Times, serif;
     z-index: 4;
     position: relative;
 
     h1, h2, h3, h4, p {
-        font-family: Cormorant, Georgia, 'Times New Roman', Times, serif;
+        font-family: Cormorant, 'Times New Roman', Times, serif;
         font-weight: 600;
     }
 }
@@ -292,7 +292,7 @@
 
     h3 {
         font-size: 24px;
-        font-family: 'Cormorant', Georgia, 'Times New Roman', Times, serif;
+        font-family: 'Cormorant', 'Times New Roman', Times, serif;
     }
 }
 
