--- a/src/site/_includes/partials/head.njk
+++ b/src/site/_includes/partials/head.njk
@@ -12,5 +12,10 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
 
+<link rel="preload" as="font" crossorigin href="/fonts/cormorant/Cormorant-Bold.ttf">
+<link rel="preload" as="font" crossorigin href="/fonts/cormorant/Cormorant-Italic.ttf">
+<link rel="preload" as="font" crossorigin href="/fonts/cormorant/Cormorant-Regular.ttf">
+<link rel="preload" as="font" crossorigin href="/fonts/cormorant/Cormorant-SemiBold.ttf">
+
 {% include 'partials/style-loader.njk' %}
 {% include 'partials/script-loader.njk' %}
