--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -1,7 +1,10 @@
 ---
 layout: layouts/restrict-page.njk
 permalink: /{{ paged.url }}index.html
-title: Indonesian Weeding Digital Invitation - Classic
+title: The Weeding of Rima and Ilma
+renderData:
+    title: "{{ paged.title }}"
+    description: "{{ paged.description }}"
 pageScripts:
     - '/js/invitation-page.js'
 pagination:
